--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.25",
+        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/typography": "^0.5.4",
+        "alpinejs": "^3.10.3",
+        "autoprefixer": "^10.4.7",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "tailwindcss": "^3.1"
     }
 }
